# Convai

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  changes.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Knowlege_base_query/: knowledge_base_queries.csv
agents/: __init__.py  intent_classification_agent.py  sql_agent.py
config/: __init__.py  logger_config.py  settings.py
database/: __init__.py  db_connection.py  db_queries.py  llm_memory.py
dataprocessing/: __init__.py  kbe_table_embedding_generation.py  tokenizer.py  user_query_processing.py
models/: __init__.py  bedrock_client.py  classification_model.py  data_models.py  embedding_model.py  text_generation_model.py
prompts/: __init__.py  prompts_templates.py
responses/: __init__.py  streaming_response.py
routers/: __init__.py  get_logs.py  llm_inference.py  rate_limiters.py  user_quota_limiter.py
systemctl/: bedrock_conv_ai.service
tests/: locustfile.py
