[project]
name = "convai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "arize-phoenix-otel>=0.12.1",
    "asyncpg==0.30.0",
    "boto3==1.37.10",
    "botocore==1.37.10",
    "certifi==2025.1.31",
    "click==8.1.8",
    "cython==3.0.12",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.11",
    "fastapi-cli==0.0.7",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "locust>=2.38.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "openinference-instrumentation-bedrock>=0.1.26",
    "openinference-semantic-conventions>=0.1.21",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "pip==25.0.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "s3transfer==0.11.4",
    "setuptools==78.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "tabulate==0.9.0",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "urllib3>=2.5.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]
